# trayinit

./: Cargo.toml  justfile
docs/: event-api-proposal.md  linux-deferred.md  pre-rfc.md  runtime-api-proposal.md
examples/: event_probe.rs  icons.rs  minimal.rs  run_minimal.rs  showcase.rs  spawn_minimal.rs  windows_minimal.rs  winit.rs  winit_no_window.rs  winit_window.rs
examples/common/: mod.rs
src/: backend.rs  error.rs  event.rs  geometry.rs  icon.rs  lib.rs  menu.rs  model.rs  options.rs  platform.rs  tooltip.rs  tray.rs
src/backend/: command.rs  mod.rs  plan.rs  runtime.rs  validate.rs  windows.rs
src/backend/runtime/: direct.rs  threaded.rs
src/backend/windows/: dark_menu_bar.rs  icon.rs  menu.rs  mod.rs  util.rs
src/platform/: linux.rs  macos.rs  mod.rs  unimplemented.rs  windows.rs
src/platform/linux/: menu.rs  mod.rs  runtime.rs  service.rs
src/platform/macos/: accelerator.rs  icon.rs  mod.rs  util.rs
src/platform/windows/: accelerator.rs  icon.rs  menu.rs  mod.rs  util.rs
