[package]
name = "trayinit"
version = "0.1.0"
edition = "2024"

[features]
default = ["linux-zbus-async-io"]
linux-zbus-async-io = ["dep:async-io", "dep:async-lock", "zbus/async-io"]
linux-zbus-tokio = ["dep:tokio", "zbus/tokio"]

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
async-io = { version = "2", optional = true }
async-lock = { version = "3", optional = true }
futures-util = { version = "0.3" }
tokio = { version = "1", default-features = false, features = [
  "rt",
  "sync",
  "time",
], optional = true }
zbus = { version = "5", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "NSApplication",
  "NSButton",
  "NSCell",
  "NSControl",
  "NSImage",
  "NSMenu",
  "NSMenuItem",
  "NSResponder",
  "NSStatusBar",
  "NSStatusBarButton",
  "NSStatusItem",
  "NSView",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "CFCGTypes",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "block2",
  "objc2-core-foundation",
  "NSData",
  "NSGeometry",
  "NSObject",
  "NSString",
  "NSThread",
] }
png = "0.18"
